<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="63dp"
        android:layout_height="58dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_bookmarks_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/textPredictionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_background_safe"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/textPredictionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bai"
            android:text="@string/text_prediction"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPredictionSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bai"
            android:text="@string/text_predict_desc"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="210dp"
            app:backgroundTint="@color/secondary"
            android:fontFamily="@font/bai"
            android:textStyle="bold"
            android:background="@drawable/rounded_button_background"
            android:text="@string/start"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imagePredictionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_background_safe"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPredictionLayout">

        <TextView
            android:id="@+id/imagePredictionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_prediction"
            android:fontFamily="@font/bai"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imagePredictionSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bai"
            android:text="@string/image_predict_desc"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnScreenShoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="210dp"
            app:backgroundTint="@color/secondary"
            android:background="@drawable/rounded_button_background"
            android:text="@string/start"
            android:fontFamily="@font/bai"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:backgroundTint="@color/secondary"
        android:background="@drawable/rounded_button_background"
        android:drawableLeft="@drawable/ic_unknown"
        android:padding="10dp"
        android:fontFamily="@font/bai"
        android:textStyle="bold"
        android:text="@string/learn_more_about_uu_ite"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePredictionLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
